*nxplayer-4.2.18.4 (08 Apr 2014)

  08 Apr 2014; Poncho <poncho@spahan.ch> +metadata.xml,
  +nxplayer-4.2.18.4.ebuild, -nxplayer-4.0.369.1.ebuild:
  net-misc/nxplayer: version bump