@@ -1,4 +1,4 @@
-DIST nomachine_4.1.29_5_i686.tar.gz 22464631 SHA256 0c9cbbd37ed300401e01e6d52b1c359123d548df54dbb7dc12bf71970c9ca377 SHA512 7227cf1d36320e163543a2c550bed44b64c128b0b3926c319fe4d4735eb5e87e7a4a6c06490e81d3200b623eb299fa89d5ecb7790ad8d1cd61db2e2159470751 WHIRLPOOL 4fc8b608ef70c1e5ff6af6465d68b8878c563f177f2c0cbcb40dbaeaee6810a3d9aa6471eea4e867ff5278f49e12ec4b6d62ee96cbf713d8867dd26fc7eae948
-DIST nomachine_4.1.29_5_x86_64.tar.gz 23626799 SHA256 ac1868ac37ee568ff2c097fd46832eaa3d3ef45cddec2bb7cc764102f31652b0 SHA512 896e4caca04d36a837ffe6837f72ae0cd845c854cf96b7809d3ac5befc29eff11b7e9693ec45d9cb5a62af545c0e16fecda95303025bb8b8217680e26a1988ba WHIRLPOOL eb2e8291c02f3af355adaac2dc39295e83910dee9fac7ed5aa0453c2ee0bb59128ef8431402dd66cd7d1945f55e0f3cb1b410c7dedb080f66ebfeee97913c879
 DIST nomachine_4.2.18_4_i686.tar.gz 22378291 SHA256 3a66436bcf38d2e1b0d8928b7092cace182a6076e4834ae20a501a5eb1e7fe50 SHA512 dad4d8d6846312d0bbc8c418a13f1894847f7e90cb8fdd2d96ba98c8641f5aac12e50bce44d411a2bdd0bd06d4ba0d08e6e86cb67eeb6056185b1caee602fc4a WHIRLPOOL 2fc0f52aa83031ba5651e569c67a97d1770c8b2e25ecad55a689f60a7d401085170c99ccfff17393033f8eb4c84bbc571b81d3feab4d883cf6bb1455da21daa2
 DIST nomachine_4.2.18_4_x86_64.tar.gz 23522684 SHA256 3deae52f825efa75dcc58127209edc34cc00ed3c128f1bbbed409018c1e18547 SHA512 601929b4ae19476cb264ba32e20dcccd05d00eca4ada14e444a95b888c7a733647d78d4d96cceb595d0ce8b95339d72280fc64801db8319ae450954ed7ad835d WHIRLPOOL 3042a283b85ea24a76a29ec41fa144bd65ebf0ba45bd3d7a712843762097c8e33698596d3305d2ee768cb1041eb3925bb955d122b8ab5c2a0b897119d38c1ba8
+DIST nomachine_4.2.25_1_i686.tar.gz 22273438 SHA256 8c5189e509d19a0d6d2ac2522c67f2c1c496c25e971a5a4af4b4fbfba32d6ace SHA512 38e5d78ff700403fa35b1c3d3c69433390b01c613e84b9df4b0de33579eb25f6e03284590a7538012f141d575ff53d14b92451781ece9aee17d037cae1a6510c WHIRLPOOL ac622a9805c24970016c84c980f0bcc1bb134aa0f5d6720aadddf15fa7b2531464cf68cf54c59bb5763708390ec257891f04c16f8c21a31ff48c2c5fa2cf2d50
+DIST nomachine_4.2.25_1_x86_64.tar.gz 23413099 SHA256 4c3317b80e7c894d59858c2d4a7260405ac02d17bc721e0d45e6ec10844ea88e SHA512 0802fc7fbfbc02efe01184911bf6028ff57897a3f276e19539e59d53930b50a2b392fa596564c9056bfd2ab1c21faf323fdb61bbb5510ea5e8c2f2b317ee889d WHIRLPOOL 8f994e0ec579727643b93a1873b7ce80abf79183eb3fad9eb16443e38e7d2c4d9dcc8135f49f9b14e867bc73b1c4931e20deb731f858e21bb7a63303e560d20b
